feat: add profile seeds

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,12 @@
     "gen-module": "nest g module",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "typeorm": "pnpm ts-node ./node_modules/typeorm/cli.js --dataSource src/infrastructure/persistence/config/data-source.ts",
+    "migration:generate": "sh -c 'pnpm typeorm migration:generate src/infrastructure/persistence/migrations/$0 -p'",
+    "migration:run": "pnpm typeorm migration:run",
+    "migration:revert": "pnpm typeorm migration:revert",
+    "seed:config": "pnpm ts-node ./node_modules/typeorm-seeding/dist/cli.js -n src/infrastructure/persistence/config/database-seed.config.ts",
+    "seed:run": "pnpm run seed:config seed",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -23,15 +29,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
