--- a/backend/package.json
+++ b/backend/package.json
@@ -30,14 +30,18 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
+    "cache-manager": "^7.2.4",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.8.2",
     "nestjs-pino": "^4.4.1",
     "pg": "^8.16.3",
     "pino-http": "^11.0.0",
