feat: add Dockerfile and add api service in docker-compose

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,16 @@
     "gen-module": "nest g module",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "typeorm": "pnpm ts-node ./node_modules/typeorm/cli.js --dataSource src/infrastructure/persistence/config/data-source.ts",
-    "migration:generate": "sh -c 'pnpm typeorm migration:generate src/infrastructure/persistence/migrations/$0 -p'",
+    "typeorm": "pnpm ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource src/infrastructure/persistence/config/data-source.ts",
     "migration:run": "pnpm typeorm migration:run",
+    "migration:generate": "sh -c 'pnpm typeorm migration:generate src/infrastructure/persistence/migrations/$0 -p'",
     "migration:revert": "pnpm typeorm migration:revert",
+    "typeorm:prod": "node ./node_modules/typeorm/cli.js --dataSource dist/infrastructure/persistence/config/data-source.config.js",
+    "migration:run:prod": "pnpm typeorm:prod migration:run",
     "seed:config": "pnpm ts-node ./node_modules/typeorm-seeding/dist/cli.js -n src/infrastructure/persistence/config/database-seed.config.ts",
     "seed:run": "pnpm run seed:config seed",
+    "seed:config:prod": "node ./node_modules/typeorm-seeding/dist/cli.js -n src/infrastructure/persistence/config/database-seed.config.js",
+    "seed:run:prod": "pnpm run seed:config:prod seed",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -41,6 +45,7 @@
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "nestjs-pino": "^4.4.1",
     "pg": "^8.16.3",
