--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -6,6 +6,26 @@ services:
       context: .
     container_name: falconi_api
     platform: linux/amd64
+    environment:
+      - PORT=3000
+      - DB_HOST=database
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=docker123
+      - DB_NAME=FalconiTest
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=FalconiTestRedis123!
+    ports:
+      - "3000:3000"
+    restart: on-failure
+    depends_on:
+      database:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks:
+      - falconi_net
   database:
     image: postgres
     platform: linux/amd64
@@ -23,6 +43,7 @@ services:
       - falconi_net
     environment:
       - POSTGRES_PASSWORD=docker123
+      - POSTGRES_DB=FalconiTest
     volumes:
       - pgdata:/var/lib/postgresql/data
   redis:
