--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -56,6 +56,14 @@ services:
     networks:
       - falconi_net
     command: redis-server --requirepass FalconiTestRedis123!
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "16686:16686"
+      - "4318:4318"
+    networks:
+      - falconi_net
 
 networks:
   falconi_net:
