--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "seed:config:prod": "node ./node_modules/typeorm-seeding/dist/cli.js -n src/infrastructure/persistence/config/database-seed.config.js",
     "seed:run:prod": "pnpm run seed:config:prod seed",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "pnpm seed:run && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -41,6 +41,18 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/instrumentation-express": "^0.57.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.56.0",
+    "@opentelemetry/instrumentation-pg": "^0.61.0",
+    "@opentelemetry/instrumentation-pino": "^0.55.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "cache-manager": "^7.2.4",
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
