--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -16,6 +16,12 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=FalconiTestRedis123!
+      - JAEGER_HOST=jaeger
+      - JAEGER_PORT=4318
+      - OTEL_SDK_ENABLED=true
+      - OTEL_SERVICE_NAME=falconi-backend
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+      - OTEL_TRACES_EXPORTER=otlp
     ports:
       - "3000:3000"
     restart: on-failure
